# universal_post_tool

./: .gitignore  LICENSE  README.ignore.md  README.md  pyproject.toml  start.bat  start.bat - Verknüpfung.lnk  start.ps1
src/gpt_time_stamp/: app.py
src/gpt_time_stamp/core/: clipboard.py  config.py  constants.py  position_recorder.py  sender.py
src/gpt_time_stamp/ui/: code_highlighter.py  main_window.py
src/universal_post_tool/: app.py
src/universal_post_tool/core/: constants.py  position_recorder.py  sender.py  timestamp.py
src/universal_post_tool/ui/: main_window.py
