[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-time-stamp"
version = "0.1.0"
description = "A tool for managing timestamps with GPT integration"
readme = "README.ignore.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.0.0",
    "pynput>=1.8.0",
    "pyautogui>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["gpt_time_stamp"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
